--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <input type="date" id="inputDatum">
                         
                         
-                        <label for="kategorier">Kategori:</label>
-                        <select name="Kategorier" id="kategorier">
+                        <label for="inputKategorier">Kategori:</label>
+                        <select name="Kategorier" id="inputKategorier">
                             <option value="städning">Städning</option>
                             <option value="familj">Familj</option>
                             <option value="vänner">Vänner</option>
@@ -104,8 +104,7 @@
 
     </div>
 
-    <script type="application/javascript" src="/min_script/script.js">
-    </script>
+    <script type="application/javascript" src="/min_script/script.js"> </script>
 </body>
 
 </html>
